# mx-sdk-rs-0.18.1-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  arwen.sh
contracts/feature-tests/composability/forwarder/: Cargo.toml  fff.rs
contracts/feature-tests/composability/forwarder/interaction/: snippets.sh
contracts/feature-tests/composability/forwarder/src/: call_async.rs  call_sync.rs  call_transf_exec.rs  contract_change_owner.rs  contract_deploy.rs  contract_update.rs  dct.rs  forwarder_main.rs  nft.rs  roles.rs  sft.rs  storage.rs
contracts/feature-tests/composability/forwarder/wasm/: Cargo.toml
denali/: Cargo.toml
denali/src/: account.rs  account_check.rs  account_raw.rs  account_raw_check.rs
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-codec-derive/src/: nested_de_derive.rs  top_de_derive.rs  top_en_derive.rs
dharitri-codec/src/: lib.rs  nested_de.rs  top_de_input.rs  top_ser_output.rs
dharitri-codec/tests/: enum_derive_test.rs  struct_with_generic_derive_test.rs  tuple_struct_derive_test.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/: async_data.rs  blockchain_mock.rs  builtin_func_exec.rs  contract_map.rs  execute_denali.rs  lib.rs  tx_context.rs
dharitri-wasm-debug/tests/: framework_denali_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_linked_list_mapper.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-derive/src/: contract_impl.rs
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
(+388 files in other folders)
